--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
         </script>
-    <link rel="stylesheet" href="/styles/style.css">
 </head>
 
 <body>
@@ -37,12 +36,12 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
-                                Produtos
+                                Serviços
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a class="dropdown-item" href="#">Corda</a></li>
-                                <li><a class="dropdown-item" href="#">Teclas</a></li>
-                                <li><a class="dropdown-item" href="#">Percussão</a></li>
+                                <li><a class="dropdown-item" href="#">Venda</a></li>
+                                <li><a class="dropdown-item" href="#">Conserto</a></li>
+                                <li><a class="dropdown-item" href="#">Upgrade</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -53,7 +52,6 @@
             </div>
         </nav>
     </header>
-
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -88,7 +86,7 @@
     <br><br>
     <div class="card-group" style="text-align: center;">
         <div class="card" style="border-radius: 20px;">
-            <img src="./img/card-01.png" class="card-img-top" style="border-radius: 20px;">
+            <a href="#"><img src="./img/card-01.png" class="card-img-top" style="border-radius: 20px;"></a>
             <div class="card-body">
                 <p class="card-text">
                     Nossa loja dispõe de um catálogo completo de instrumentos musicais de corda, teclas e
@@ -100,7 +98,7 @@
             </div>
         </div>
         <div class="card" style="border-radius: 20px;">
-            <img src="./img/card-02.png" class="card-img-top" style="border-radius: 20px;">
+            <a href="#"><img src="./img/card-02.png" class="card-img-top" style="border-radius: 20px;"></a>
             <div class="card-body">
                 <p class="card-text">
                     Seja para a realização de pequenos reparos ou para grandes revitalizações, nossa equipe de
@@ -115,7 +113,7 @@
             </div>
         </div>
         <div class="card" style="border-radius: 20px;">
-            <img src="./img/card-03.png" class="card-img-top" style="border-radius: 20px;">
+            <a href="#"><img src="./img/card-03.png" class="card-img-top" style="border-radius: 20px;"></a>
             <div class="card-body">
                 <p class="card-text">
                     Você sente que está na hora de ir ao próximo nível, porém não quer gastar muito para ter o
@@ -145,12 +143,24 @@
         </div>
     </div>
     <br><br>
-    <footer class="footer bg-dark py-3" style="text-align: center;">
+    <footer class="footer bg-dark py-3" style="text-align: center; position: relative; bottom: 0; width: 100%;">
         <div class="container-fluid text-muted">
-            Todos os direitos revervados <br>
-            PinhalMusic Instrumentos Musicais LTDA <br> 
-            Av. Brasília, 3682 - Ed. Tower, Centro <br>
-            89870-000 - Pinhalzinho - SC <br>
+            <div class="row">
+                <div class="col-sm">
+                    Todos os direitos revervados <br>
+                    PinhalMusic Instrumentos Musicais LTDA <br>
+                    Av. Brasília, 3682 - Ed. Tower, Centro <br>
+                    89870-000 - Pinhalzinho - SC <br>
+                </div>
+                <div class="col-sm">
+                    <div class="container py-3">
+                        <a href="#"><img src="../img/facebook.png" height="64px" width="64px"></a>
+                        <a href="#" style="padding-left: 25px;"><img src="../img/instagram.png" height="64px" width="64px"></a>
+                        <a href="#" style="padding-left: 25px;"><img src="../img/whatsapp.png" height="64px" width="64px"></a>
+                        <a href="#" style="padding-left: 25px;"><img src="../img/telegram.png" height="64px" width="64px"></a>
+                    </div>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
