--- a/pages/contato.html
+++ b/pages/contato.html
@@ -12,7 +12,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
         </script>
-    <link rel="stylesheet" href="../styles/style.css">
 </head>
 
 <body>
@@ -37,12 +36,12 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
-                                Produtos
+                                Serviços
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a class="dropdown-item" href="#">Corda</a></li>
-                                <li><a class="dropdown-item" href="#">Teclas</a></li>
-                                <li><a class="dropdown-item" href="#">Percussão</a></li>
+                                <li><a class="dropdown-item" href="#">Venda</a></li>
+                                <li><a class="dropdown-item" href="#">Conserto</a></li>
+                                <li><a class="dropdown-item" href="#">Upgrade</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -114,7 +113,8 @@
 
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d444.96230812736457!2d-52.987177962386895!3d-26.849541404963745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94fb2093fd3aad55%3A0xccd0db89669f2164!2sSC-160%2C%202250%20-%20Centro%2C%20Pinhalzinho%20-%20SC%2C%2089870-000!5e0!3m2!1spt-BR!2sbr!4v1617942390836!5m2!1spt-BR!2sbr"
-                            width="100%" height="300" style="border-style: solid black;" allowfullscreen="" loading="lazy"></iframe>
+                            width="100%" height="300" style="border-style: solid black;" allowfullscreen=""
+                            loading="lazy"></iframe>
                     </div>
                 </div>
             </div>
@@ -123,12 +123,23 @@
     <br><br><br><br><br>
     <footer class="footer bg-dark py-3" style="text-align: center; position: relative; bottom: 0; width: 100%;">
         <div class="container-fluid text-muted">
-            Todos os direitos revervados <br>
-            PinhalMusic Instrumentos Musicais LTDA <br>
-            Av. Brasília, 3682 - Ed. Tower, Centro <br>
-            89870-000 - Pinhalzinho - SC <br>
+            <div class="row">
+                <div class="col-sm">
+                    Todos os direitos revervados <br>
+                    PinhalMusic Instrumentos Musicais LTDA <br>
+                    Av. Brasília, 3682 - Ed. Tower, Centro <br>
+                    89870-000 - Pinhalzinho - SC <br>
+                </div>
+                <div class="col-sm">
+                    <div class="container py-3">
+                        <a href="#"><img src="../img/facebook.png" height="64px" width="64px"></a>
+                        <a href="#" style="padding-left: 25px;"><img src="../img/instagram.png" height="64px" width="64px"></a>
+                        <a href="#" style="padding-left: 25px;"><img src="../img/whatsapp.png" height="64px" width="64px"></a>
+                        <a href="#" style="padding-left: 25px;"><img src="../img/telegram.png" height="64px" width="64px"></a>
+                    </div>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
-
 </html>
