--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,9 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
         </script>
-    <link rel="stylesheet" href="../styles/style.css">
 </head>
-
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -37,12 +34,12 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
-                                Produtos
+                                Serviços
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a class="dropdown-item" href="#">Corda</a></li>
-                                <li><a class="dropdown-item" href="#">Teclas</a></li>
-                                <li><a class="dropdown-item" href="#">Percussão</a></li>
+                                <li><a class="dropdown-item" href="#">Venda</a></li>
+                                <li><a class="dropdown-item" href="#">Conserto</a></li>
+                                <li><a class="dropdown-item" href="#">Upgrade</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -53,8 +50,6 @@
             </div>
         </nav>
     </header>
-
-
     <div class="container"><br>
         <div class="row featurette">
             <div class="col-md-7">
@@ -80,9 +75,7 @@
                 <img src="../img/sobre-01.jpg" height="400px" width="400px">
             </div>
         </div>
-
         <hr class="featurette-divider">
-
         <div class="row featurette">
             <div class="col-md-7 order-md-2">
                 <h2 class="featurette-heading" style="font-weight: bold;">Missão</h2>
@@ -110,9 +103,7 @@
                 </div>
             </div>
         </div>
-
         <hr class="featurette-divider">
-
         <div class="row featurette">
             <div class="col-md-7">
                 <h2 class="featurette-heading" style="font-weight: bold;">Conheça a nossa estrutura</h2>
@@ -130,17 +121,26 @@
                     allowfullscreen></iframe>
             </div>
         </div>
-
     </div>
-
-    <footer class="footer bg-dark py-3" style="text-align: center;">
+    <footer class="footer bg-dark py-3" style="text-align: center; position: relative; bottom: 0; width: 100%;">
         <div class="container-fluid text-muted">
-            Todos os direitos revervados <br>
-            PinhalMusic Instrumentos Musicais LTDA <br>
-            Av. Brasília, 3682 - Ed. Tower, Centro <br>
-            89870-000 - Pinhalzinho - SC <br>
+            <div class="row">
+                <div class="col-sm">
+                    Todos os direitos revervados <br>
+                    PinhalMusic Instrumentos Musicais LTDA <br>
+                    Av. Brasília, 3682 - Ed. Tower, Centro <br>
+                    89870-000 - Pinhalzinho - SC <br>
+                </div>
+                <div class="col-sm">
+                    <div class="container py-3">
+                        <a href="#"><img src="../img/facebook.png" height="64px" width="64px"></a>
+                        <a href="#" style="padding-left: 25px;"><img src="../img/instagram.png" height="64px" width="64px"></a>
+                        <a href="#" style="padding-left: 25px;"><img src="../img/whatsapp.png" height="64px" width="64px"></a>
+                        <a href="#" style="padding-left: 25px;"><img src="../img/telegram.png" height="64px" width="64px"></a>
+                    </div>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
-
 </html>
