adicionadas paginas dos serviços

--- a/pages/index.html
+++ b/pages/index.html
@@ -39,9 +39,9 @@
                                 Serviços
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a class="dropdown-item" href="#">Venda</a></li>
-                                <li><a class="dropdown-item" href="#">Conserto</a></li>
-                                <li><a class="dropdown-item" href="#">Upgrade</a></li>
+                                <li><a class="dropdown-item" href="pages/venda.html">Venda</a></li>
+                                <li><a class="dropdown-item" href="pages/conserto.html">Conserto</a></li>
+                                <li><a class="dropdown-item" href="pages/upgrade.html">Upgrade</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -86,7 +86,7 @@
     <br><br>
     <div class="card-group" style="text-align: center;">
         <div class="card" style="border-radius: 20px;">
-            <a href="#"><img src="../img/card-01.png" class="card-img-top" style="border-radius: 20px;"></a>
+            <a href="pages/venda.html"><img src="../img/card-01.png" class="card-img-top" style="border-radius: 20px;"></a>
             <div class="card-body">
                 <p class="card-text">
                     Nossa loja dispõe de um catálogo completo de instrumentos musicais de corda, teclas e
@@ -98,7 +98,7 @@
             </div>
         </div>
         <div class="card" style="border-radius: 20px;">
-            <a href="#"><img src="../img/card-02.png" class="card-img-top" style="border-radius: 20px;"></a>
+            <a href="pages/conserto.html"><img src="../img/card-02.png" class="card-img-top" style="border-radius: 20px;"></a>
             <div class="card-body">
                 <p class="card-text">
                     Seja para a realização de pequenos reparos ou para grandes revitalizações, nossa equipe de
@@ -113,7 +113,7 @@
             </div>
         </div>
         <div class="card" style="border-radius: 20px;">
-            <a href="#"><img src="../img/card-03.png" class="card-img-top" style="border-radius: 20px;"></a>
+            <a href="pages/upgrade.html"><img src="../img/card-03.png" class="card-img-top" style="border-radius: 20px;"></a>
             <div class="card-body">
                 <p class="card-text">
                     Você sente que está na hora de ir ao próximo nível, porém não quer gastar muito para ter o
