--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -37,9 +37,9 @@
                                 Serviços
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a class="dropdown-item" href="#">Venda</a></li>
-                                <li><a class="dropdown-item" href="#">Conserto</a></li>
-                                <li><a class="dropdown-item" href="#">Upgrade</a></li>
+                                <li><a class="dropdown-item" href="pages/venda.html">Venda</a></li>
+                                <li><a class="dropdown-item" href="pages/conserto.html">Conserto</a></li>
+                                <li><a class="dropdown-item" href="pages/upgrade.html">Upgrade</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
