pagina de faq sobre o upgrade

--- a/pages/pages/venda.html
+++ b/pages/pages/venda.html
@@ -29,18 +29,18 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                            <a class="nav-link" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../sobre.html">Sobre Nós</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                            <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Serviços
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a class="dropdown-item" href="#">Venda</a></li>
+                                <li><a class="dropdown-item active" aria-current="page" href="#">Venda</a></li>
                                 <li><a class="dropdown-item" href="conserto.html">Conserto</a></li>
                                 <li><a class="dropdown-item" href="upgrade.html">Upgrade</a></li>
                             </ul>
@@ -146,6 +146,54 @@
                 <h5 class="card-title">Acordeon Michael 80 Baixos ACM8007N Case Super Luxo e Alças</h5>
                 <p class="card-text">Cód.: E1010023662</p>
                 <a href="#" class="btn btn-primary">De <s>R$6.154,90</s><br>Por R$5.539,41</a>
+            </div>
+        </div>
+    </div>
+    <!-- PERCUSSAO -->
+    <div class="card-group container pt-3">
+        <div class="card">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./img/cajon-tras.jpg" class="card-img-top py-3">
+                </div>
+                <div class="carousel-item active frente">
+                    <img src="./img/cajon-frente.jpg" class="card-img-top py-3">
+                </div>
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">Cajon Elétrico FSA Gospel FG1511 - Águas Tranquilas</h5>
+                <p class="card-text" style="text-align: justify; font-size: 13px;">Cód.: E1000084409</p>
+                <a href="#" class="btn btn-primary">De <s>R$579,90</s><br>Por R$521,91</a>
+            </div>
+        </div>
+        <div class="card">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./img/cajon2-tras.jpg" class="card-img-top py-3">
+                </div>
+                <div class="carousel-item active frente">
+                    <img src="./img/cajon2-frente.jpg" class="card-img-top py-3">
+                </div>
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">Cajon Elétrico FSA Strike com Captação - 3D SK5062 Premium</h5>
+                <p class="card-text" style="text-align: justify; font-size: 13px;">Cód.: E1000110951</p>
+                <a href="#" class="btn btn-primary">De <s>R$451,90</s><br>Por R$406,71</a>
+            </div>
+        </div>
+        <div class="card">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./img/cajon3-tras.jpg" class="card-img-top py-3">
+                </div>
+                <div class="carousel-item active frente">
+                    <img src="./img/cajon3-frente.jpg" class="card-img-top py-3">
+                </div>
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">Cajon Elétrico FSA Design FC6641 - Berrante Aqui tem Coragi</h5>
+                <p class="card-text">Cód.: E1000084417</p>
+                <a href="#" class="btn btn-primary">De <s>R$805,50</s><br>Por R$725,31</a>
             </div>
         </div>
     </div>
