--- a/pages/pages/upgrade.html
+++ b/pages/pages/upgrade.html
@@ -53,6 +53,79 @@
         </nav>
     </header>
 
+    <div class="container">
+        <h1 class="py-3" style="text-align: center;">Upgrade de Instrumentos</h1>
+        <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOne">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        O que é o Upgrade de Instrumentos?
+                    </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        O <i>Upgrade de Instrumentos</i> é um programa oferecido pela <i>PinhalMusic</i> que visa a
+                        compra de instrumentos novos
+                        por meio da troca de seu instrumento usado. <br><br>Basicamente, você entrega seu instrumento usado e
+                        ele passa por uma justa avaliação
+                        de nossos especialistas, que estipularão o valor a ser descontado na compra de um instrumento
+                        novo.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        Qualquer instrumento usado pode ser entregue na troca por um novo?
+                    </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        Sim!! <br>
+                        Você pode entregar qualquer instrumento musical usado, seja ele de cordas, teclas, percussão,
+                        sopro, etc.<br><br>
+                        Todo e qualquer instrumento recebido será avaliado para que seja estipulado o valor a ser
+                        descontado na compra de seu instrumento novo.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        Um violão usado, pode apenas ser usado para upgrade de um novo violão? Posso usá-lo para compra de um acordeon?
+                    </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        Qualquer instrumento usado pode ser utilizado para upgrade para qualquer instrumento novo! <br><br>
+                        Então sim, você pode utilizar um violão usado para fazer upgrade a um acordeon, teclado, cajon, etc.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingFour">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                        Que características são levadas em consideração para avaliação do meu instrumento usado?
+                    </button>
+                </h2>
+                <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        Qualquer instrumento usado pode ser utilizado para upgrade para qualquer instrumento novo! <br><br>
+                        Então sim, você pode utilizar um violão usado para fazer upgrade a um acordeon, teclado, cajon, etc.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <footer class="footer bg-dark py-3" style="text-align: center; position: relative; bottom: 0; width: 100%;">
         <div class="container-fluid text-muted">
             <div class="row">
@@ -65,8 +138,10 @@
                 <div class="col-sm">
                     <div class="container py-3">
                         <a href="#"><img src="../../img/facebook.png" height="64px" width="64px"></a>
-                        <a href="#" style="padding-left: 25px;"><img src="../../img/instagram.png" height="64px" width="64px"></a>
-                        <a href="#" style="padding-left: 25px;"><img src="../../img/whatsapp.png" height="64px" width="64px"></a>
+                        <a href="#" style="padding-left: 25px;"><img src="../../img/instagram.png" height="64px"
+                                width="64px"></a>
+                        <a href="#" style="padding-left: 25px;"><img src="../../img/whatsapp.png" height="64px"
+                                width="64px"></a>
                     </div>
                 </div>
             </div>
