adicionadas imagens na tela de upgrades

--- a/pages/pages/venda.html
+++ b/pages/pages/venda.html
@@ -150,7 +150,7 @@
         </div>
     </div>
     <!-- PERCUSSAO -->
-    <div class="card-group container pt-3">
+    <div class="card-group container py-3">
         <div class="card">
             <div class="carousel-inner">
                 <div class="carousel-item active">
