--- a/pages/pages/upgrade.html
+++ b/pages/pages/upgrade.html
@@ -54,6 +54,29 @@
     </header>
 
     <div class="container">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./img/upgrade.png" class="d-block w-100">
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/upgrade-2.png" class="d-block w-100">
+                </div>=
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Anterior</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Próxima</span>
+            </button>
+        </div>
+    </div>
+
+    <div class="container py-3">
         <h1 class="py-3" style="text-align: center;">Upgrade de Instrumentos</h1>
         <div class="accordion" id="accordionExample">
             <div class="accordion-item">
@@ -118,8 +141,16 @@
                 <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        Qualquer instrumento usado pode ser utilizado para upgrade para qualquer instrumento novo! <br><br>
-                        Então sim, você pode utilizar um violão usado para fazer upgrade a um acordeon, teclado, cajon, etc.
+                        Em primeiro lugar, queremos garantir que nossa avaliação é extremamente justa!<br><br>
+                        Algumas características consideradas são:
+                        <ul>
+                            <li>Estado de conservação geral do instrumento.</li>
+                            <li>Estado de conservação das cordas (caso haja).</li>
+                            <li>Qualidade de emissão sonora.</li>
+                            <li>Material de construção.</li>
+                            <li>Depreciação.</li>
+                            <li>Acessórios.</li>
+                        </ul>
                     </div>
                 </div>
             </div>
