--- a/pages/pages/conserto.html
+++ b/pages/pages/conserto.html
@@ -28,19 +28,20 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                            <a class="nav-link" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../sobre.html">Sobre Nós</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle active" aria-current="page" href="#"
+                                id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
                                 Serviços
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                 <li><a class="dropdown-item" href="venda.html">Venda</a></li>
-                                <li><a class="dropdown-item" href="#">Conserto</a></li>
+                                <li><a class="dropdown-item active" href="#">Conserto</a></li>
                                 <li><a class="dropdown-item" href="upgrade.html">Upgrade</a></li>
                             </ul>
                         </li>
@@ -52,6 +53,62 @@
             </div>
         </nav>
     </header>
+
+    <div class="container py-3">
+        <h1 class="py-3" style="text-align: center;">Conserto de Instrumentos</h1>
+        <div class="row row-cols-1 row-cols-md-2 g-4">
+            <div class="col">
+                <div class="card">
+                    <img src="./img/conserto_01.jpeg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Regulagem da Pestana</h5>
+                        <p class="card-text">
+                            Ajustes finos para que o seu instrumento emita o melhor som possível, sem que as cordas arranhem 
+                            os trastes do braço do instrumento.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="./img/conserto_02.jpeg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Lixamento da Pestana</h5>
+                        <p class="card-text">
+                            Lixamento realizado para melhor performance e menos gasto das cordas no atrito que ocorre no momento
+                            do toque e afinação do instrumento.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="./img/conserto_03.jpeg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Reparos Estruturais</h5>
+                        <p class="card-text">
+                            Colagem e reparos estruturais em todos os componentes do instrumento, como cavalete, cotovelo, costela,
+                            tampo e braço.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="./img/conserto_04.jpeg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Troca e manutenção de componentes</h5>
+                        <p class="card-text">
+                            Troca de componentes do instrumento, como afinadores, captadores, plugues, potenciomentos, chaves,
+                            tarrachas.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
     <footer class="footer bg-dark py-3" style="text-align: center; position: relative; bottom: 0; width: 100%;">
         <div class="container-fluid text-muted">
@@ -65,8 +122,10 @@
                 <div class="col-sm">
                     <div class="container py-3">
                         <a href="#"><img src="../../img/facebook.png" height="64px" width="64px"></a>
-                        <a href="#" style="padding-left: 25px;"><img src="../../img/instagram.png" height="64px" width="64px"></a>
-                        <a href="#" style="padding-left: 25px;"><img src="../../img/whatsapp.png" height="64px" width="64px"></a>
+                        <a href="#" style="padding-left: 25px;"><img src="../../img/instagram.png" height="64px"
+                                width="64px"></a>
+                        <a href="#" style="padding-left: 25px;"><img src="../../img/whatsapp.png" height="64px"
+                                width="64px"></a>
                     </div>
                 </div>
             </div>
