--- a/pages/pages/upgrade.html
+++ b/pages/pages/upgrade.html
@@ -28,20 +28,20 @@
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                            <a class="nav-link" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../sobre.html">Sobre Nós</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                            <a class="nav-link dropdown-toggle active" aria-current="page" href="#" id="navbarDropdownMenuLink" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Serviços
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                 <li><a class="dropdown-item" href="venda.html">Venda</a></li>
                                 <li><a class="dropdown-item" href="conserto.html">Conserto</a></li>
-                                <li><a class="dropdown-item" href="#">Upgrade</a></li>
+                                <li><a class="dropdown-item active" aria-current="page" href="#">Upgrade</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
